Update JS to .hover

--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -61,19 +61,19 @@
 
 <script>
 
-$("li#about").click(function(){
+$("li#about").hover(function(){
       $("#content1").toggle();
 });
 
-$("li#education").click(function() {
+$("li#education").hover(function() {
       $("#content2").toggle();
 });
 
-$("li#info").click(function() {
+$("li#info").hover(function() {
       $("#content3").toggle();
 });
 
-$("li#ref").click(function() {
+$("li#ref").hover(function() {
       $("#content4").toggle();
 });
 /*$("li#about").click(function() {
