--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 
 <head>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <link href="/normalize.css" rel="stylesheet"> 
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <link href="//normalize-css.googlecode.com/svn/trunk/normalize.css" rel="stylesheet" />
 	<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="welcome.css">
 	<title> Resume: Ryan Anderson</title>
 </head>
 
-<header>
-  <h1>Ryan Anderson</h1>
-  <h3>Developer</h3>
-</header>
-
 <body>
+  <header>
+    <h1>Michael Krombopulos</h1>
+    <h3>Asset Management</h3>
+  </header>
+<div class="group">
  <div class="clearfix"> 
   <div class="column">
 	 <ul>
@@ -24,41 +25,49 @@
 	<div class="clr"></div>
  </div>
 
-
+<main>
  <div id="content1" class="content show-description">
-  <p>About me <br />
+  <p>About me 
+    <br />
   	 <small>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi non quis exercitationem culpa nesciunt nihil aut nostrum explicabo reprehenderit optio amet ab temporibus asperiores quasi cupiditate. Voluptatum ducimus voluptates voluptas?</small>
   </p>
  </div>
 
  <div id="content2" class="content" >
-  <p>Education <br />
+  <p>Education 
+    <br />
   	 <small>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi non quis exercitationem culpa nesciunt nihil aut nostrum explicabo reprehenderit optio amet ab temporibus asperiores quasi cupiditate. Voluptatum ducimus voluptates voluptas?</small>
   </p>
  </div>
 
  <div id="content3" class="content">
-  <p>Experience <br />
+  <p>Experience 
+    <br />
   	 <small>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi non quis exercitationem culpa nesciunt nihil aut nostrum explicabo reprehenderit optio amet ab temporibus asperiores quasi cupiditate. Voluptatum ducimus voluptates voluptas?</small>
   </p>
  </div>
 
  <div id="content4" class="content">
-   <p>References <br />
-      Paul Garven (co-worker): (780)-828-1111<br />
-  	  Paul CWC (owner of CWWC): (416)- 721-1111<br />
-      Someone at Bitmaker: (416-967-11-11
+   <p>References 
+    <br />Person 1: (780)-828-1111
+    <br />Person 2: (416)- 721-1111
+    <br />Person 3: (416-967-11-11
    </p>
  </div>
 </div>
-
+</div>
+</main>
 
 <div class="footer">
-  <p>Contact <br/>
+  <p>Contact 
+    <br/>
 	   <small>mobile: (647)-333-8723 <br/>
-	   e-mail: hotmail@gmail.com</small>
+	         e-mail: hotmail@gmail.com</small>
   </p>
 </div>
+
+</body>
+
 
 <script>
 
@@ -79,4 +88,3 @@ $("li#ref").hover(function() {
 });
 </script>
 
-</body>
